Auf eigene Angular und bootstrp-Datei umgestellt

--- a/src/main/resources/static/activityAdd.html
+++ b/src/main/resources/static/activityAdd.html
@@ -4,8 +4,10 @@
 <meta charset="utf-8">
 <title>Activity Details</title>
 <link rel="stylesheet" type= "text/css" href="style.css" />
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-<script src="https://angular-ui.github.com/bootstrap/ui-bootstrap-tpls-0.1.0.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<script src="https://angular-ui.github.com/bootstrap/ui-bootstrap-tpls-0.1.0.js"></script>-->
+<script src="/angular/angular.min.js"></script>
+<script src="/angular/ui-bootstrap-tpls-0.1.0.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script>
 var app = angular.module('ActivityMeterApp', ['ui.bootstrap']);
