--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -147,8 +147,8 @@ app.controller('EditActivityCtrl', function ($scope, $http, activity, dialog) {
 </head>
 <body>
 	<link href="style.css" rel="stylesheet" type="text/css" />
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-	<script src="https://angular-ui.github.com/bootstrap/ui-bootstrap-tpls-0.1.0.js"></script>
+	<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+	<script src="https://angular-ui.github.com/bootstrap/ui-bootstrap-tpls-0.1.0.js"></script>-->
 	<div id = "content">
 	<div id ="head">
 	<img src = "images/HM_Logo.jpeg" />
