Add Category Button added

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -157,7 +157,7 @@ app.controller('EditActivityCtrl', function ($scope, $http, activity, dialog) {
 	</div>
 
 	<div id = "menu">
-		<a href = "./index.html">Home</a> <a href="./activityAdd.html">Add Activity</a>
+		<a href = "./index.html">Home</a> <a href="./activityAdd.html">Add Activity</a> <a href= "./addCategory">Add Category</a>
 	</div>
 
 	<div id = "body" ng-controller="ActivityCtrl">
