--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -64,7 +64,7 @@ app.controller('DetailActivityCtrl', function ($scope, $http, $dialog) {
 	</div>
 	<div id="menu">
 		<a href="./index.html">Home</a>
-		<a href="./activityAdd.html">Add Activity</a>
+		<a href="./activityAdd.html">Add Activity</a> <a href= "./addCategory.html">Add Category</a>
 	</div>
 	<div id="body" ng-controller="DetailActivityCtrl">
 		<h3>{{activity.title}}</h3>
