addCategory Button in addActivity

--- a/src/main/resources/static/activityAdd.html
+++ b/src/main/resources/static/activityAdd.html
@@ -131,8 +131,9 @@ app.controller('EditActivityCtrl', function ($scope, $http, activity, dialog) {
 		<img src="images/Cal-Poly_Logo.jpeg" />
 	</div>
 	<div id="menu">
-    	<a href="./index.html">Home</a> 
-    	<a href="./activityAdd.html">Add Activity</a>
+		<a href="./index.html">Home</a>
+		<a href="./activityAdd.html">Add Activity</a> 
+		<a href="./addCategory.html">Add Category</a>
 	</div>
 	<div id = "body" ng-controller="AddActivityCtrl">
 		<h3>Add Activity</h3>
