--- a/src/main/resources/static/activityEdit.html
+++ b/src/main/resources/static/activityEdit.html
@@ -107,6 +107,7 @@ app.controller('EditActivityCtrl', function ($scope, $http, $dialog) {
 	<div id="menu">
 		<a href="./index.html">Home</a>
 		<a href="./activityAdd.html">Add Activity</a>
+		 <a href= "./addCategory.html">Add Category</a>
 	</div>
 	<div id="body" ng-controller="EditActivityCtrl">
 		<div class="item">
