Dummy-Category for add Activity

--- a/src/main/resources/static/activityAdd.html
+++ b/src/main/resources/static/activityAdd.html
@@ -137,6 +137,10 @@ app.controller('EditActivityCtrl', function ($scope, $http, activity, dialog) {
 	</div>
 	<div id = "body" ng-controller="AddActivityCtrl">
 		<h3>Add Activity</h3>
+			<div class="item">
+		<div class="key">Kategorie:</div>
+			<div class="value">Platzhalter für Drop-Down</div>
+		</div>
 		<div class="item">
 		<div class="key">Title:</div>
 			<div class="value"><input ng-model="activity.title" rows="1" cols="60"></div>
