Dummy-Category for edit and detail

--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -69,6 +69,10 @@ app.controller('DetailActivityCtrl', function ($scope, $http, $dialog) {
 	<div id="body" ng-controller="DetailActivityCtrl">
 		<h3>{{activity.title}}</h3>
 		<div class="item">
+			<div class="key">Kategorie:</div>
+			<div class="value">Platzhalter für Drop-Down</div>
+		</div>
+		<div class="item">
 			<div class="key">Text:</div>
 			<div class="value">{{activity.text}}&nbsp;</div>
 		</div>
