--- a/src/main/resources/static/activityEdit.html
+++ b/src/main/resources/static/activityEdit.html
@@ -111,6 +111,10 @@ app.controller('EditActivityCtrl', function ($scope, $http, $dialog) {
 	</div>
 	<div id="body" ng-controller="EditActivityCtrl">
 		<div class="item">
+		<div class="key">Kategorie:</div>
+			<div class="value">Platzhalter für Drop-Down</div>
+		</div>
+		<div class="item">
 			<div class="key">Title:</div>
 			<div class="value"><textarea ng-model="activity.title" rows="1" cols="60"></textarea></div>
 		</div>
