--- a/src/main/resources/static/addCategory.html
+++ b/src/main/resources/static/addCategory.html
@@ -12,63 +12,7 @@
 <script>
 var app = angular.module('ActivityMeterApp', ['ui.bootstrap']);
 
-function loadActivities ($scope, $http){
-		$http({
-       		 method : 'GET',
-       		 /*
-       		 url: (window.location.hostname === 'localhost' ?
-     				'http://localhost:8080/activity' :
-                    'https://activityexample.herokuapp.com/activity')
-             */
-             url: 'activity'
-
-    		}).then(function (response) {
-     			 $scope.activities = response.data;
-  		});
-  	}
-
-app.controller('ActivityCtrl', function ($scope, $http, $dialog) {
-
-  	loadActivities($scope, $http);
-
-
-  	var addDialogOptions = {
-    	controller: 'AddActivityCtrl',
-    	templateUrl: './activityAdd.html'
-  	};
-
-  	$scope.add = function(){
-  		window.location.href = '/activityAdd.html';
-    	//$dialog.dialog.(angular.extend(addDialogOptions, {})).open().then(function (){
-    	//loadActivities($scope, $http);
-       // }) ;
-  	};
-
-  	var editDialogOptions = {
-	    controller: 'EditActivityCtrl',
-	    templateUrl: './activityEdit.html',
-	};
-  	$scope.edit = function(activity){
-   	 	var activityToEdit = activity;
-    	$dialog.dialog(angular.extend(editDialogOptions, {resolve: {activity: angular.copy(activityToEdit)}})).open().then(function (){
-    	    loadActivities($scope, $http);
-        }) ;
-  	};
-
-	$scope.delete = function(activity) {
-		var deleteRequest = {
-			method : 'DELETE',
-			url: 'activity/' + activity.id
-		};
-
-  		$http(deleteRequest).then(function() {
-			loadActivities($scope, $http);
-		});
-  		//todo handle error
-	};
-
-});
-app.controller('AddActivityCtrl', function($scope, $http, $dialog){
+app.controller('AddCategoryCtrl', function($scope, $http, $dialog){
 
 	  	$scope.save = function($activity) {
   		var postRequest = {
@@ -88,9 +32,9 @@ app.controller('AddActivityCtrl', function($scope, $http, $dialog){
   		});
   	};
 
+  	
   	$scope.close = function(){;
   		window.location.href = './index.html';
-    	//dialog.close(undefined);
   	};
 });
 app.controller('EditActivityCtrl', function ($scope, $http, activity, dialog) {
@@ -134,7 +78,7 @@ app.controller('EditActivityCtrl', function ($scope, $http, activity, dialog) {
     	<a href="./index.html">Home</a> 
     	<a href="./activityAdd.html">Add Activity</a> <a href= "./addCategory.html">Add Category</a>
 	</div>
-	<div id = "body" ng-controller="AddActivityCtrl">
+	<div id = "body" ng-controller="AddCategoryCtrl">
 		<h3>Add Category</h3>
 		<div class="item">
 		<div class="key">Title:</div>
@@ -142,7 +86,7 @@ app.controller('EditActivityCtrl', function ($scope, $http, activity, dialog) {
 		</div>
 		<div class="buttons">
 			<button>Save</button>
-			<button>Close</button>
+			<button ng-click="close()">Close</button>
 		</div>
 </div>
 </div>
