minor logic adjustment

--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -70,7 +70,7 @@ app.controller('DetailActivityCtrl', function ($scope, $http, $dialog) {
 		<h3>{{activity.title}}</h3>
 		<div class="item">
 			<div class="key">Kategorie:</div>
-			<div class="value">Platzhalter für Drop-Down</div>
+			<div class="value">Platzhalter für Kategorie</div>
 		</div>
 		<div class="item">
 			<div class="key">Text:</div>
