--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -86,7 +86,7 @@ app.controller('DetailActivityCtrl', function ($scope, $http, $dialog) {
 		<h3>{{activity.title}}</h3>
 		<div class="item">
 			<div class="key">Kategorie:</div>
-			<div class="value">Platzhalter für Kategorie</div>
+			<div class="value" >{{activity.category.name}}&nbsp;</div>
 		</div>
 		<div class="item">
 			<div class="key">Text:</div>
