--- a/src/main/resources/static/activityAdd.html
+++ b/src/main/resources/static/activityAdd.html
@@ -40,6 +40,7 @@ app.controller('AddActivityCtrl', function($scope, $http, $dialog){
     	method : 'POST',
        	url: '/activity' ,
        	data: {
+       			category: $activity.category,
   				text: $activity.text,
   				tags: $activity.tags,
   				title: $activity.title
