--- a/src/main/resources/static/activityAdd.html
+++ b/src/main/resources/static/activityAdd.html
@@ -7,6 +7,7 @@
 <script src="/angular/angular.min.js"></script>
 <script src="/angular/ui-bootstrap-tpls-0.1.0.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <script>
 var app = angular.module('ActivityMeterApp', ['ui.bootstrap']);
 
