--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -183,7 +183,8 @@ app.controller('EditActivityCtrl', function ($scope, $http, activity, dialog) {
 				<td class="mdl-data-table__cell--non-numeric" colspan=0><input type="text" ng-model = "f.title" placeholder="Search for title.."></td>
 				<td class="mdl-data-table__cell--non-numeric" colspan=1><input type="text" ng-model = "f.tags" placeholder="Search for tags.."></td>
 				<td class="mdl-data-table__cell--non-numeric" colspan=1><input type="text" ng-model = "f.creationDate" placeholder="Search for dates.."></td>
-				<td class="value" colspan=1><input type="text" ng-model = "f.category.name" placeholder="Search for categories.."></td>
+				<td class="value" colspan=1><select ng-model="f.category.name" ng-options="x.name for x in categories"><option value = ""> -- select category -- </option></select></td>
+
 				<td class="mdl-data-table__cell--non-numeric" colspan=1><button class="mdl-button" ng-click="add()">add Activity</button></td>
 
 				<td>&nbsp</td>
