--- a/src/main/resources/static/activityAdd.html
+++ b/src/main/resources/static/activityAdd.html
@@ -78,6 +78,10 @@ app.controller('AddActivityCtrl', function($scope, $http, $dialog){
 	<div id = "body" ng-controller="AddActivityCtrl">
 		<h3>Add Activity</h3>
 		<div class="item">
+		<div class="key">University:</div>
+		<div class="value">Platzhalter für Universität</div>
+		</div>
+		<div class="item">
 		<div class="key">Category:</div>
 		<div class="value"><select ng-model="activity.category" ng-options="x.name for x in categories"></select></div>
 		</div>
