--- a/src/main/resources/static/addCategory.html
+++ b/src/main/resources/static/addCategory.html
@@ -51,6 +51,10 @@ app.controller('AddCategoryCtrl', function($scope, $http, $dialog){
 	<div id = "body" ng-controller="AddCategoryCtrl">
 		<h3>Add Category</h3>
 		<div class="item">
+		<div class="key">University:</div>
+		<div class="value">Platzhalter für Universität</div>
+		</div>
+		<div class="item">
 		<div class="key">Title:</div>
 			<div class="value"><input ng-model="category.name" rows="1" cols="60"></div>
 		</div>
