new line for university in details

--- a/src/main/resources/static/detail.html
+++ b/src/main/resources/static/detail.html
@@ -85,6 +85,10 @@ app.controller('DetailActivityCtrl', function ($scope, $http, $dialog) {
 	<div id="body" ng-controller="DetailActivityCtrl">
 		<h3>{{activity.title}}</h3>
 		<div class="item">
+		<div class="key">University:</div>
+		<div class="value">Platzhalter für Universität</div>
+		</div>
+		<div class="item">
 			<div class="key">Kategorie:</div>
 			<div class="value" >{{activity.category.name}}&nbsp;</div>
 		</div>
